deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: band-aid
spec:
  selector:
    app: band-aid
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
